[package]
name = "rust_wow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasmrt = "2.0.0"
eframe = "0.23.0"
egui = "0.23.0"
egui_demo_lib = { version = "0.23.0", features = ["syntect"] }
egui_extras ="0.23.0"
syntect = "5.1.0"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct3D9", "Win32_System_StationsAndDesktops", "Win32_System_Memory"] }

